Fix carousel navigation style on mobile

--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -24,7 +24,11 @@ body {
 }
 
 .text-nav {
-  @apply bg-bright-gray pt-3 pr-1 text-md xs:text-lg;
+  @apply bg-bright-gray pt-3 pr-1 text-nav-sizes;
+}
+
+.text-nav-sizes {
+  @apply text-md xs:text-lg;
 }
 
 .text-body {
@@ -32,9 +36,9 @@ body {
 }
 
 .text-carousel-inline {
-  @apply bg-bright-gray inline text-base md:text-lg leading-[2.5rem] md:leading-[3.7rem];
+  @apply bg-bright-gray inline text-nav-sizes leading-[2.5rem] md:leading-[3.7rem];
 }
 
 .flex-gap-correction {
-  @apply -ml-[1px] pl-[1px] -mt-[1px] pt-[1px];
+  @apply -ml-[3px] pl-[1px] -mt-[1px] pt-[1px];
 }
